# rgb-d-people-detection

./: .gitignore  CMakeLists.txt  README.md
config/: people_detection_params.yaml
include/: pcl_detector.h  real_sense_2_grabber.h  terminal.h  velocity_estimation.h
src/: original_demo.cpp  pcl_detector.cpp  people_detection.cpp  real_sense_2_grabber.cpp  realsense_pcl_detector.cpp  velocity_estimation.cpp
